# commander-bee

./: .gitignore  DEVLOG.md  LICENSE  README.md  README_ZH.md  bees.json  pyproject.toml  requirements.txt  setup_commander_cron.py
agent/: agent.py  audit.py  cli.py  deck.py  infra_toolsets.py  lark_cli.py  loop.py  main.py  memory.py  skills.py  workspace.py
cron/: __init__.py  jobs.py  scheduler.py
design_notes/: 01-aristotle-bee.md  02-architecture-bee.md  03-project-manager-bee.md  04-worldbee.md  05-commander-worker-io.md  06-worldbee-pheromone.md  07-full-agent-ecosystem.md  08-strategic-bee.md  09-cardmaster-bee.md  README.md  beebox.md  exogenous-pheromone-formats.md
prd/: commanderbee-prd.html  commanderbee-v2.html  nats-commander-prd.html  nats-commander.html
skills/: arch-atomic-analysis.md  arch-collection-split.md  arch-novel-split.md  arch-novel-tag.md  code-decision-guidelines.md  code-review.md  commander-acceptance.md  commander-dispatch.md  commander-intervention.md  commander-monitor.md  commander-report.md  create-mechanism-skill.md  create-task-skill.md  deck-control.md  job-audit.md  job-handoff.md  job-status.md  lark-contact.md  lark-drive.md  lark-messaging.md  mail-to-job.md  pm-bee.md  skill-creator-is-you.md  swarm-awareness.md  swarm-receive.md  swarm-send.md  todo-ball-machine.md  web-research.md  wiki.md
swarm/: file_server.py  listener.py  server.conf
templates/: agent.md.example  mechanism-skill-reference.md  soul.md.example  task-skill-reference.md
tests/: conftest.py  test_agent.py  test_cron_jobs.py  test_cron_scheduler.py  test_deck.py  test_infra_toolsets.py  test_memory.py  test_registry.py  test_safety.py  test_skill_parser_consistency.py  test_skills.py  test_snapshot_rollback.py  test_state_resilience.py  (+1 more)
(+38 files in other folders)
